fix router GET
